SERVER-22347 Use "legacy" read mode for replica set connections.

Adds a Mongo.prototype.isReplicaSetConnection() method to connection
objects in the mongo shell. The mongo shell then degrades to use
"legacy" read mode for replica set connections because DBCommandCursor
doesn't route getMore and killCursors operations to the original server.