src/mongo/scripting/mozjs/mongo.h
@@ -52,6 +52,7 @@ struct MongoBase : public BaseInfo {
         MONGO_DECLARE_JS_FUNCTION(getClientRPCProtocols);
         MONGO_DECLARE_JS_FUNCTION(getServerRPCProtocols);
         MONGO_DECLARE_JS_FUNCTION(insert);
+        MONGO_DECLARE_JS_FUNCTION(isReplicaSetConnection);
         MONGO_DECLARE_JS_FUNCTION(logout);
         MONGO_DECLARE_JS_FUNCTION(remove);
         MONGO_DECLARE_JS_FUNCTION(runCommand);
@@ -62,7 +63,7 @@ struct MongoBase : public BaseInfo {
         MONGO_DECLARE_JS_FUNCTION(getMaxWireVersion);
     };
 
-    static const JSFunctionSpec methods[17];
+    static const JSFunctionSpec methods[18];
 
     static const char* const className;
     static const unsigned classFlags = JSCLASS_HAS_PRIVATE;
